--- a/source/.readthedocs.yaml
+++ b/source/.readthedocs.yaml
@@ -9,9 +9,10 @@ version: 2
 sphinx:
    configuration: docs/conf.py
 
+# Optionally build your docs in additional formats such as PDF
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
    version: "3.7"
    install:
-   - requirements: .../requirements.txt
+   - requirements: requirements.txt
