update the docs once again

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,8 @@ repo_name: GitHub
 edit_uri: blob/master/docs/
 
 nav:
+  - 'Commands':
+    - 'Commands': 'rin-commands.md'
   - 'Running the Rin Bot':
     - 'Getting Started': 'getting-started.md'
   - 'Contributing': 
