Add in Disclaimer page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - 'Branches': 'branches.md'
   - 'Terms and Conditions':
     - 'Art Assets': 'art-assets.md'
+    - 'Disclaimer': 'disclaimer.md'
   - 'About':
     - 'About Rin': 'about-rin.md'
     - 'Project Structure': 'project-structure.md'
