--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - 'Terms and Conditions':
     - 'Art Assets': 'art-assets.md'
     - 'Disclaimer': 'disclaimer.md'
+    - 'Terms of Service': 'terms-of-service.md'
   - 'About':
     - 'About Rin': 'about-rin.md'
     - 'Project Structure': 'project-structure.md'
