--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,4 +27,5 @@ nav:
     - 'Disclaimer': 'disclaimer.md'
   - 'About':
     - 'About Rin': 'about-rin.md'
+    - 'Supported APIs': 'supported-apis.md'
     - 'Project Structure': 'project-structure.md'
