--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-sphinx-rtd-theme==0.5.2
-myst-parser==0.14.0
-mkdocs-git-revision-date-localized-plugin==0.9.2
-mkdocs==1.2.2
+sphinx-rtd-theme>=0.5.2
+myst-parser>=0.14.0
+mkdocs-git-revision-date-localized-plugin>=0.9.2
+mkdocs>=1.2.2
